--- a/pilotstudie/heatmap.html
+++ b/pilotstudie/heatmap.html
@@ -16,8 +16,10 @@
       integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
       crossorigin=""
     ></script>
+    <script src="/pilotstudie/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
     <h1>Heatmap.js</h1>
+    <div id="map"></div>
   </body>
 </html>
