--- a/pilot_heatmap/index.html
+++ b/pilot_heatmap/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Leaflet Heatmap Layer Plugin</title>
     <link rel="stylesheet" href="heatmap-style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
