--- a/pilot_heatmap/index.html
+++ b/pilot_heatmap/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Leaflet Heatmap Layer Plugin</title>
     <link rel="stylesheet" href="heatmap-style.css" />
+    <!-- TODO: Använder inte jQuery i nuvarande lösning? -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
