--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -9,9 +9,23 @@
       href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
     />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
-    <script src="/pilot_d3/scripts/d3_app.js"></script>
+    <script type="text/javascript">
+      function init() {
+        let map = L.map("map").setView([20, 30], 3);
+
+        map._initPathRoot();
+
+        let svg = d3.select("#map").select("svg"),
+          g = svg.append("g");
+      }
+
+      init();
+    </script>
+    <!-- <script src="/pilot_d3/scripts/d3_app.js"></script> -->
   </body>
 </html>
