--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -16,7 +16,7 @@
     <div id="map"></div>
 
     <script type="text/javascript">
-      var baseLayer = L.map("map").setView([20, 20], 3);
+      let baseLayer = L.map("map").setView([20, 20], 3);
       L.tileLayer(
         "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}.png",
         {
@@ -27,7 +27,7 @@
 
       baseLayer._initPathRoot();
 
-      var svg = d3.select("#map").select("svg"),
+      let svg = d3.select("#map").select("svg"),
         g = svg.append("g");
     </script>
   </body>
