--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -16,6 +16,14 @@
     <div id="map"></div>
 
     <script type="text/javascript">
+      loadJSON(function(response) {
+        let jsonDataResponse = JSON.parse(response);
+        //console.log(jsonDataResponse);
+        let jsonData = {
+          data: jsonDataResponse
+        };
+      });
+
       let baseLayer = L.map("map").setView([20, 20], 3);
       L.tileLayer(
         "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}.png",
@@ -29,6 +37,20 @@
 
       let svg = d3.select("#map").select("svg"),
         g = svg.append("g");
+
+      let d3Layer;
+
+      function loadJSON(callback) {
+        var obj = new XMLHttpRequest();
+        obj.overrideMimeType("application/json");
+        obj.open("GET", "./dataset.json", true);
+        obj.onreadystatechange = function() {
+          if (obj.readyState == 4 && obj.status == "200") {
+            callback(obj.responseText);
+          }
+        };
+        obj.send(null);
+      }
     </script>
   </body>
 </html>
