--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -15,42 +15,6 @@
   <body>
     <div id="map"></div>
 
-    <script type="text/javascript">
-      loadJSON(function(response) {
-        let jsonDataResponse = JSON.parse(response);
-        //console.log(jsonDataResponse);
-        let jsonData = {
-          data: jsonDataResponse
-        };
-      });
-
-      let baseLayer = L.map("map").setView([20, 20], 3);
-      L.tileLayer(
-        "https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}.png",
-        {
-          attribution: "D3Pilot",
-          maxZoom: 18
-        }
-      ).addTo(baseLayer);
-
-      baseLayer._initPathRoot();
-
-      let svg = d3.select("#map").select("svg"),
-        g = svg.append("g");
-
-      let d3Layer;
-
-      function loadJSON(callback) {
-        var obj = new XMLHttpRequest();
-        obj.overrideMimeType("application/json");
-        obj.open("GET", "./dataset.json", true);
-        obj.onreadystatechange = function() {
-          if (obj.readyState == 4 && obj.status == "200") {
-            callback(obj.responseText);
-          }
-        };
-        obj.send(null);
-      }
-    </script>
+    <script src="/pilot_d3/scripts/d3_app.js"></script>
   </body>
 </html>
