--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>D3.js with Leaflet.js</title>
+    <!-- Load Leaflet.js -->
     <link
       rel="stylesheet"
-      href="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7/leaflet.css"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script
+      src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+      integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+      crossorigin=""
+    ></script>
+    <!-- Load D3.js and Geo Projection plugin -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
-    <script src="https://d19vzq90twjlae.cloudfront.net/leaflet-0.7/leaflet.js"></script>
     <link rel="stylesheet" href="d3-style.css" />
   </head>
 
   <body>
+    <!-- Element where the map will be placed -->
     <div id="map"></div>
 
     <script src="/pilot_d3/scripts/d3_app.js"></script>
