Add more comments

--- a/pilot_d3/index.html
+++ b/pilot_d3/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>D3.js with Leaflet.js</title>
+    <!-- Stylescheet link -->
+    <link rel="stylesheet" href="d3-style.css" />
     <!-- Load Leaflet.js -->
     <link
       rel="stylesheet"
@@ -18,14 +20,11 @@
     <!-- Load D3.js and Geo Projection plugin -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
-
-    <link rel="stylesheet" href="d3-style.css" />
   </head>
-
   <body>
     <!-- Element where the map will be placed -->
     <div id="map"></div>
-
+    <!-- Link to app.js -->
     <script src="/pilot_d3/scripts/d3_app.js"></script>
   </body>
 </html>
