--- a/pilot_heatmap/index.html
+++ b/pilot_heatmap/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <title>Leaflet Heatmap Layer Plugin</title>
+    <!-- Stylescheet link -->
     <link rel="stylesheet" href="heatmap-style.css" />
+    <!-- Load Leaflet.js libraries -->
     <link
       rel="stylesheet"
       href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
     />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <!-- Load Heatmap.js & Leaflet-pluging for Heatmap.js -->
     <script src="/pilot_heatmap/scripts/heatmap.js"></script>
     <script src="/pilot_heatmap/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
+    <!-- Element where the map will be placed -->
     <div id="map"></div>
+    <!-- Link to app.js -->
     <script src="/pilot_heatmap/scripts/app.js"></script>
   </body>
 </html>
