Added "TODO" for next week.

--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -12,6 +12,7 @@
     />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <!-- Load Heatmap.js & Leaflet-pluging for Heatmap.js -->
+    <!-- TODO: Fix paths -->
     <script src="/pilot_heatmap/scripts/heatmap.js"></script>
     <script src="/pilot_heatmap/scripts/leaflet-heatmap.js"></script>
   </head>
