Fixed paths & names

--- a/D3/index.html
+++ b/D3/index.html
@@ -25,6 +25,6 @@
     <!-- Element where the map will be placed -->
     <div id="map"></div>
     <!-- Link to app.js -->
-    <script src="/pilot_d3/scripts/d3_app.js"></script>
+    <script src="/D3/scripts/app.js"></script>
   </body>
 </html>
