--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -13,13 +13,13 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <!-- Load Heatmap.js & Leaflet-pluging for Heatmap.js -->
     <!-- TODO: Fix paths -->
-    <script src="/pilot_heatmap/scripts/heatmap.js"></script>
-    <script src="/pilot_heatmap/scripts/leaflet-heatmap.js"></script>
+    <script src="/HeatmapJS/scripts/heatmap.js"></script>
+    <script src="/HeatmapJS/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
     <!-- Element where the map will be placed -->
     <div id="map"></div>
     <!-- Link to app.js -->
-    <script src="/pilot_heatmap/scripts/app.js"></script>
+    <script src="/HeatmapJS//scripts/app.js"></script>
   </body>
 </html>
