Checkpoint: Working Leaflet.js

--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -19,6 +19,6 @@
     <!-- Element where the map will be placed -->
     <div id="map"></div>
     <!-- Link to app.js -->
-    <script src="/HeatmapJS//scripts/app.js"></script>
+    <script src="/HeatmapJS/scripts/app.js"></script>
   </body>
 </html>
