--- a/vued3/public/index.html
+++ b/vued3/public/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <!-- Error-message if noscript is enabled. -->
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
