--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Leaflet Heatmap Layer Plugin</title>
+    <title>Heatmap.js with Leaflet.js</title>
     <!-- Stylescheet link -->
     <link rel="stylesheet" href="heatmap-style.css" />
     <!-- Load Leaflet.js libraries -->
