--- a/vued3/public/index.html
+++ b/vued3/public/index.html
@@ -19,9 +19,8 @@
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+        properly without JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <!-- built files will be auto injected -->
     <div id="app"></div>
