--- a/vueheatmap/public/index.html
+++ b/vueheatmap/public/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- Import stylesheet for Leaflet.js -->
     <link
       rel="stylesheet"
       href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
     />
   </head>
   <body>
+    <!-- Error-message if noscript is enabled. -->
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
@@ -19,7 +21,7 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div id="app"></div>
   </body>
 </html>
