Create button & start measurement script

--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -16,6 +16,7 @@
     <script src="/HeatmapJS/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
+    <button id="startMeasurement">Start</button>
     <!-- Element where the map will be placed -->
     <div id="map"></div>
     <!-- Link to app.js -->
