--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -16,7 +16,9 @@
     <script src="/HeatmapJS/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
-    <button id="startMeasurement">Start</button>
+    <button id="startMeasurement" onclick="window.location.reload();">
+      Start
+    </button>
     <!-- Element where the map will be placed -->
     <div id="map"></div>
     <!-- Link to app.js -->
