--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -16,7 +16,7 @@
     <script src="/HeatmapJS/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
-    <button id="startMeasurement" onclick="window.location.reload();">
+    <button id="startMeasurement">
       Start
     </button>
     <!-- Element where the map will be placed -->
