--- a/HeatmapJS/index.html
+++ b/HeatmapJS/index.html
@@ -16,12 +16,14 @@
     <script src="/HeatmapJS/scripts/leaflet-heatmap.js"></script>
   </head>
   <body>
-    <button id="startMeasurement">
-      Start
-    </button>
-    <!-- Element where the map will be placed -->
+    <!-- Buttons for measurement and download data. -->
+    <div class="buttonPlacement">
+      <a id="startMeasurement"><div>Start</div></a>
+      <!-- <a id="download"><div>Download</div></a> -->
+    </div>
+    <!-- Element where the map will be placed. -->
     <div id="map"></div>
-    <!-- Link to app.js -->
+    <!-- Link to app.js. -->
     <script src="/HeatmapJS/scripts/app.js"></script>
   </body>
 </html>
